<resources>
    <string name="app_name">Trasher</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_to_trasher">Welcome to Trasher</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="you_dont_have_account">You don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="create_new_account">Create a new account</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="comments">Comments</string>
    <string name="challenges">Challenges</string>
    <string name="no_location_service">No location service detected</string>
    <string name="by">by</string>
    <string name="please_grant_required_permissions">Please grant all the required permissions,in order to use Trasher.</string>
    <string name="some_required_permission_are_disabled">Some of the required permission was permanently denied, please go to app setting to grant them.</string>
    <string name="required_permission">Required permission</string>
    <string name="try_again">Try Again</string>
    <string name="no_thanks">No Thanks</string>
    <string name="go_to_setting_required_permissions">Go to setting and grant required permissions</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>
    <string name="creation_date">Creation</string>
    <string name="starting_date">Starting</string>
    <string name="ending_date">Ending</string>
    <string name="address">Address</string>
    <string name="enroll">Enroll</string>
    <string name="photos">Photos</string>
    <string name="send">Send</string>
    <string name="commenting_failed">Commenting Failed</string>
    <string name="cancel">Cancel</string>
    <string name="add_challenge">Add Challenge</string>
    <string name="save">Save</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="country">Country</string>
</resources>
