<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="36dp">

    <EditText
        android:hint="@string/street"
        android:id="@+id/street"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/city"
        android:id="@+id/city"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/country"
        android:id="@+id/country"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/starting_date"
        android:id="@+id/starting_date"
        android:layout_width="match_parent"
        android:calendarViewShown="false"
        android:text="dd/MM/yyyy"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/ending_date"
        android:id="@+id/ending_date"
        android:layout_width="match_parent"
        android:calendarViewShown="false"
        android:text="dd/MM/yyyy"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:id="@+id/add_challenge"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>