<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_background"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <LinearLayout
            android:id="@+id/login_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="@dimen/splash_logo_size"
                android:layout_height="@dimen/splash_logo_size"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/trasher_inverse" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yesteryear_regular"
                android:text="@string/welcome_to_trasher"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/material_on_primary_emphasis_high_type"
                tools:ignore="UnusedAttribute" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                style="@style/OutlinedTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_margin_top"
                android:hint="@string/username"
                android:textColorHint="@color/material_on_primary_emphasis_medium"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:startIconDrawable="@drawable/ic_account_circle_24px"
                app:startIconTint="@color/material_on_primary_emphasis_high_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/inputs_margin"
                    android:textColor="@color/material_on_primary_emphasis_high_type" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/OutlinedTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/inputs_margin"
                android:hint="@string/password"
                android:textColorHint="@color/material_on_primary_emphasis_medium"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/material_on_primary_emphasis_high_type"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_24px"
                app:startIconTint="@color/material_on_primary_emphasis_high_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/material_on_primary_emphasis_high_type" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/forgot_password"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorAccent"
                        app:rippleColor="@color/colorAccent" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_in_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    app:strokeColor="@color/colorAccent"
                    android:text="@string/login"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_margin_top"
                android:gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_dont_have_account"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/material_on_primary_emphasis_high_type"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/sign_up"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    app:rippleColor="@color/colorAccent"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.30"
                    android:background="@android:color/darker_gray" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/material_on_primary_emphasis_high_type" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.30"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>