<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_background"
    tools:context=".ui.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <LinearLayout
            android:id="@+id/login_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/create_new_account"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/material_on_primary_emphasis_high_type"
                tools:ignore="UnusedAttribute" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/FilledTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_margin_top"
                android:hint="@string/name"
                android:textColorHint="@color/material_on_primary_emphasis_medium"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintAnimationEnabled="true"
                app:startIconDrawable="@drawable/ic_account_circle_24px"
                app:startIconTint="@color/material_on_primary_emphasis_high_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/inputs_margin"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:textColor="@color/material_on_primary_emphasis_high_type" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/FilledTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColorHint="@color/material_on_primary_emphasis_medium"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintAnimationEnabled="true"
                app:startIconDrawable="@drawable/ic_account_circle_24px"
                app:startIconTint="@color/material_on_primary_emphasis_high_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:textColor="@color/material_on_primary_emphasis_high_type" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/FilledTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/material_on_primary_emphasis_medium"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintAnimationEnabled="true"
                app:startIconDrawable="@drawable/ic_email_24px"
                app:startIconTint="@color/material_on_primary_emphasis_high_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/inputs_margin"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/material_on_primary_emphasis_high_type" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/FilledTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/inputs_margin"
                android:hint="@string/password"
                android:textColorHint="@color/material_on_primary_emphasis_medium"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/material_on_primary_emphasis_high_type"
                app:hintAnimationEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_24px"
                app:startIconTint="@color/material_on_primary_emphasis_high_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:textColor="@color/material_on_primary_emphasis_high_type" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    app:ccp_arrowColor="@color/material_on_primary_emphasis_high_type"
                    app:ccp_contentColor="@color/material_on_primary_emphasis_high_type"
                    app:ccp_defaultPhoneCode="213"
                    app:ccp_showArrow="false"
                    app:ccp_showNameCode="false"
                    app:ccp_textGravity="CENTER" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FilledTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:textColorHint="@color/material_on_primary_emphasis_medium"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:hintAnimationEnabled="true"
                    app:startIconDrawable="@drawable/ic_local_phone_24px"
                    app:startIconTint="@color/material_on_primary_emphasis_high_type"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="phone"
                        android:textColor="@color/material_on_primary_emphasis_high_type" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorAccent"
                app:strokeColor="@color/colorAccent"
                android:layout_marginBottom="36dp"
                android:text="@string/sign_up"
                tools:targetApi="lollipop" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>